feat(*): add structure page and add frist config router

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <base href="/">
   </head>
   <body>
-    <component-example></component-example>
+  <app-babel-formation></app-babel-formation>
   </body>
 </html>
