--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>Webpack App breaking change</title>
     <base href="/">
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
   <app-babel-formation></app-babel-formation>
